force-app/main/default/objects/LLC_BI__Collateral_Type__c/fields/LLC_BI__Active__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Active__c</fullName>
    <description>This optional field indicates the collateral type. If the collateral type has an expiration date in the past this will be set to false. If the collateral type is inactive, it cannot be selected when adding collateral.</description>
    <formula>TODAY() &lt; LLC_BI__Expire_Date__c || ISBLANK(LLC_BI__Expire_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>