force-app/main/default/objects/LLC_BI__Collateral_Type__c/fields/LLC_BI__Advance_Rate__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Advance_Rate__c</fullName>
    <description>This field is manually populated. The percentage of the value of a collateral that a lender is willing to extend for a loan.</description>
    <inlineHelpText>The percentage of the value of a collateral that a lender is willing to extend for a loan.</inlineHelpText>
    <label>Advance Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>