force-app/main/default/objects/LLC_BI__Collateral_Type__c/fields/LLC_BI__Auto_Update_Collateral_Value__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Auto_Update_Collateral_Value__c</fullName>
    <defaultValue>false</defaultValue>
    <description>System administrators select this checkbox to enable the automatic update functionality. This functionality maps fields such as value, valuation date and valuation type to the corresponding collateral management field to keep the collateral values up-to-date.</description>
    <inlineHelpText>Select this checkbox to enable automatic updates for collateral management records with collateral valuation details. This functionality applies to records with collateral valuation details with a primary valuation type that receive a newer valuation.</inlineHelpText>
    <label>Auto-Update Collateral Value</label>
    <type>Checkbox</type>
</CustomField>