force-app/main/default/objects/LLC_BI__Collateral_Type__c/fields/LLC_BI__Category__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Category__c</fullName>
    <description>This field is used to classify a piece of collateral to a specific category.</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LLC_BI__Collateral_Category_Type</valueSetName>
    </valueSet>
</CustomField>