force-app/main/default/objects/LLC_BI__Collateral_Type__c/fields/LLC_BI__Condo_PUD__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Condo_PUD__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This optional field specifies if the collateral is a condo or planned unit development. It is manually populated.</description>
    <label>Condo/PUD</label>
    <type>Checkbox</type>
</CustomField>