force-app/main/default/objects/LLC_BI__Collateral_Type__c/fields/LLC_BI__Group_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Group_Type__c</fullName>
    <description>The administrator populates this field to specify the type of group if the collateral type and subtype pairing is a collateral group. By default it is blank.</description>
    <inlineHelpText>If the collateral type and subtype pairing is a group, select the type of group.</inlineHelpText>
    <label>Group Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Single Relationship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>