force-app/main/default/objects/LLC_BI__Collateral_Type__c/fields/LLC_BI__Is_Complex__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Complex__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This optional boolean field is used to determine if the record has a parent-child relationship. The default is false, where the record does not have a parent-child relationship.</description>
    <label>Is Complex</label>
    <type>Checkbox</type>
</CustomField>