force-app/main/default/objects/LLC_BI__Collateral_Type__c/fields/LLC_BI__Leasing_Screen__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Leasing_Screen__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Administrators populate this optional text field with the screen that displays when users add or edit an asset on a lease. By default, the value is blank.</description>
    <inlineHelpText>Use this optional field to define the screen that displays when users add or edit an asset on a lease. If a screen is not defined, the LLC_BI_Screen_c screen will be used by default.</inlineHelpText>
    <label>Leasing Screen</label>
    <referenceTo>nFORCE__Screen__c</referenceTo>
    <relationshipLabel>Leasing Screen</relationshipLabel>
    <relationshipName>Leasing_Screen</relationshipName>
    <type>Lookup</type>
</CustomField>