force-app/main/default/objects/LLC_BI__Collateral_Type__c/fields/LLC_BI__Manufactured_Home__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Manufactured_Home__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field defaults to false and is manually populated. is a checkbox to be marked if this piece of collateral is a manufactured home.</description>
    <inlineHelpText>This is a checkbox to be marked if this piece of collateral is a manufactured home.</inlineHelpText>
    <label>Manufactured Home</label>
    <type>Checkbox</type>
</CustomField>