force-app/main/default/objects/LLC_BI__Collateral_Type__c/fields/LLC_BI__Primary_Valuation_Sources__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Primary_Valuation_Sources__c</fullName>
    <description>System administrators manually populate this multi-select picklist to indicate the acceptable primary valuation sources for a collateral type. When a user selects this source, the system automatically selects the primary checkbox on the collateral valuation record. This field determines when the system automatically updates a collateral management record if an admin configured the auto update functionality.</description>
    <inlineHelpText>Select the acceptable primary valuation sources applicable to this collateral type.</inlineHelpText>
    <label>Primary Valuation Sources</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account Balance / Statement</fullName>
            </value>
            <value>
                <fullName>Appraisal</fullName>
            </value>
            <value>
                <fullName>Credit Officer</fullName>
            </value>
            <value>
                <fullName>Financial Statement</fullName>
            </value>
            <value>
                <fullName>Insurance Agent</fullName>
            </value>
            <value>
                <fullName>Internal Valuation</fullName>
            </value>
            <value>
                <fullName>Inventory Report</fullName>
            </value>
            <value>
                <fullName>Invoice / Bill of Sale</fullName>
            </value>
            <value>
                <fullName>Real Estate Abundance of Caution</fullName>
            </value>
            <value>
                <fullName>Receivables Aging</fullName>
            </value>
            <value>
                <fullName>Real Estate Evaluation</fullName>
            </value>
            <value>
                <fullName>Real Estate Restricted Appraisal</fullName>
            </value>
            <value>
                <fullName>Third Party Source</fullName>
            </value>
            <value>
                <fullName>Valuation Service Vendor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>