force-app/main/default/objects/LLC_BI__Collateral_Type__c/fields/LLC_BI__Subtype__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Subtype__c</fullName>
    <description>This field is manually populated. The subtype of a piece of Collateral.</description>
    <inlineHelpText>The subtype of a piece of Collateral.</inlineHelpText>
    <label>Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LLC_BI__Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Motor Vehicle</fullName>
            </value>
            <value>
                <fullName>Pleasure Boat</fullName>
            </value>
            <value>
                <fullName>Vessel</fullName>
            </value>
            <value>
                <fullName>Aircraft</fullName>
            </value>
            <value>
                <fullName>Trailer</fullName>
            </value>
            <value>
                <fullName>Other Titled</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Savings/CD&apos;s</fullName>
            </value>
            <value>
                <fullName>Securities</fullName>
            </value>
            <value>
                <fullName>Note/Instrument</fullName>
            </value>
            <value>
                <fullName>Receipts/Bills</fullName>
            </value>
            <value>
                <fullName>Letter of Credit</fullName>
            </value>
            <value>
                <fullName>Other Possessory</fullName>
            </value>
            <value>
                <fullName>Life Insurance</fullName>
            </value>
            <value>
                <fullName>Inventory</fullName>
            </value>
            <value>
                <fullName>Chattel Paper</fullName>
            </value>
            <value>
                <fullName>Accounts</fullName>
            </value>
            <value>
                <fullName>Equipment</fullName>
            </value>
            <value>
                <fullName>General Intangibles</fullName>
            </value>
            <value>
                <fullName>Farm Products</fullName>
            </value>
            <value>
                <fullName>Livestock</fullName>
            </value>
            <value>
                <fullName>Farm Equipment</fullName>
            </value>
            <value>
                <fullName>Consumer Goods</fullName>
            </value>
            <value>
                <fullName>Tort Claim</fullName>
            </value>
            <value>
                <fullName>Crops</fullName>
            </value>
            <value>
                <fullName>Fixtures</fullName>
            </value>
            <value>
                <fullName>Standing Timber</fullName>
            </value>
            <value>
                <fullName>Minerals, Oil and Gas</fullName>
            </value>
            <value>
                <fullName>1-4 Family</fullName>
            </value>
            <value>
                <fullName>Multi-Family</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>