force-app/main/default/objects/LLC_BI__Collateral_Type__c/fields/LLC_BI__Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Type__c</fullName>
    <description>The type of Collateral.</description>
    <inlineHelpText>The type of Collateral.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Titled</fullName>
            </value>
            <value>
                <fullName>Real Estate</fullName>
            </value>
            <value>
                <fullName>UCC</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Possessory</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>