force-app/main/default/objects/LLC_BI__Collateral_Type__c/fields/LLC_BI__Valuation_Source__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Valuation_Source__c</fullName>
    <description>A picklist field used to capture the potential sources of collateral valuation. This would be entered by the user when a new valuation is entered. No default value.</description>
    <inlineHelpText>The potential sources of collateral valuation</inlineHelpText>
    <label>Valuation Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account Balance / Statement</fullName>
            </value>
            <value>
                <fullName>Appraisal</fullName>
            </value>
            <value>
                <fullName>Credit Officer</fullName>
            </value>
            <value>
                <fullName>Financial Statement</fullName>
            </value>
            <value>
                <fullName>Insurance Agent</fullName>
            </value>
            <value>
                <fullName>Internal Valuation</fullName>
            </value>
            <value>
                <fullName>Inventory Report</fullName>
            </value>
            <value>
                <fullName>Invoice / Bill of Sale</fullName>
            </value>
            <value>
                <fullName>Real Estate Abundance of Caution</fullName>
            </value>
            <value>
                <fullName>Receivables Aging</fullName>
            </value>
            <value>
                <fullName>Real Estate Evaluation</fullName>
            </value>
            <value>
                <fullName>Real Estate Restricted Appraisal</fullName>
            </value>
            <value>
                <fullName>Third Party Source</fullName>
            </value>
            <value>
                <fullName>Valuation Service Vendor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>